--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,12 @@
 			<version>2.19.0</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<version>42.7.3</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
