--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=LiterAlura
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/literalura
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_CLAVE}
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
